test/syntax/24-logop-err.c
// ======================================================================

/* logop -> DOUBLEOR
          | DOUBLEAND */

// ======================================================================

void main(void)
{
  int i;
  int j;

  i = 0;
  j = 1;
  i = (i && j) %% (i < j);	// error: not logop
}

// ======================================================================
